# docs/swagger.json
@@ -736,9 +736,29 @@
                     "maxLength": 32,
                     "minLength": 3
                 },
+                "role_id": {
+                    "type": "integer"
+                },
                 "username": {
                     "type": "string",
                     "maxLength": 50
+                }
+            }
+        },
+        "service_models.Role": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "level": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
                 }
             }
         },
@@ -769,6 +789,12 @@
                 },
                 "is_active": {
                     "type": "boolean"
+                },
+                "role": {
+                    "$ref": "#/definitions/service_models.Role"
+                },
+                "role_id": {
+                    "type": "integer"
                 },
                 "username": {
                     "type": "string"
