# internal/service/service_models/role.go
@@ -1,0 +1,8 @@
+package service_models
+
+type Role struct {
+	ID          int64  `json:"id"`
+	Name        string `json:"name"`
+	Description string `json:"description"`
+	Level       int64  `json:"level"`
+}
